--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,20 +1,35 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Iniciar sesión</ion-title>
+    <ion-title>Appsita</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-item>
-    <ion-label position="floating">Correo electrónico</ion-label>
-    <ion-input type="email" [(ngModel)]="email"></ion-input>
-  </ion-item>
-  
-  <ion-item>
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input type="password" [(ngModel)]="password"></ion-input>
-  </ion-item>
-  
-  <ion-button expand="full" (click)="login()">Iniciar sesión</ion-button>
+<ion-content class="ion-padding">
+  <ion-button id="open-modal" expand="block">Iniciar sesión</ion-button>
+  <p>{{ message }}</p>
+  <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Inicio de sesión</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+
+        <ion-item>
+          <ion-label position="stacked">Correo electrónico</ion-label>
+          <ion-input type="email" placeholder="Tu correo electrónico" [(ngModel)]="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Contraseña</ion-label>
+          <ion-input type="password" placeholder="Tu contraseña" [(ngModel)]="password"></ion-input>
+        </ion-item>
+
+        <ion-button expand="full" (click)="login()">Iniciar sesión</ion-button>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
+
 
