muchos cambios xd

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,21 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">si</ion-title>
+      <ion-title size="large">Inicio</ion-title>
     </ion-toolbar>
   </ion-header>
 
+  <ion-card>
+    <img alt="lobo" src="https://i.pinimg.com/736x/c0/b1/c4/c0b1c4a8b83253a97c96fc99297e7e18.jpg" />
+    <ion-card-header>
+      <ion-card-title>Bienvenido</ion-card-title>
+      <ion-card-subtitle>Subtitulo</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Hola
+    </ion-card-content>
+  </ion-card>
+
+
+</ion-content>
