--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,49 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-back-button{
+  margin-right: 80%;
 }
 
-#container strong {
+p{
+  color: #ffffff;
   font-size: 20px;
-  line-height: 26px;
+
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-title {
+  animation: titleAnimation 5s;
+  color: #ffffff;
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 5px;
 }
 
-#container a {
-  text-decoration: none;
+@keyframes titleAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(25%);
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  75% {
+    transform: translateX(-25%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+ion-input.anim {
+  animation: inputAnimation 1s;
+}
+
+@keyframes inputAnimation {
+  0% {
+    transform: translateX(-25%);
+  }
 }
