animación de los input

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,8 +5,8 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-button id="open-modal" expand="block" shape="round" class="btn">Iniciar sesión</ion-button>
-  <ion-button id="open-modal2" expand="block" (click)="registro()" shape="round" class="btn2">Registrarse</ion-button>
+  <ion-button id="open-modal" expand="block" shape="round">Iniciar sesión</ion-button>
+  <ion-button id="open-modal" expand="block" (click)="registro()" shape="round">Registrarse</ion-button>
   <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
     <ng-template>
       <ion-header>
