--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,12 +21,12 @@
     <ion-card-content>
       <ion-item>
         <ion-label position="stacked">Nombre</ion-label>
-        <ion-input id="input" type="text" placeholder="Ingrese su nombre" [(ngModel)]="name"></ion-input>
+        <ion-input [class.anim]="isAnimated" id="input" type="text" placeholder="Ingrese su nombre" [(ngModel)]="name"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label position="stacked">Apellido</ion-label>
-        <ion-input id="input" type="text" placeholder="Ingrese su apellido" [(ngModel)]="lastname"></ion-input>
+        <ion-input [class.anim]="isAnimated" id="input" type="text" placeholder="Ingrese su apellido" [(ngModel)]="lastname"></ion-input>
       </ion-item>
 
       <ion-list>
