--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,7 +10,7 @@ p{
 }
 
 ion-title {
-  animation: titleAnimation 5s;
+  animation: titleAnimation 3s;
   color: #ffffff;
   font-size: 28px;
   font-weight: bold;
@@ -20,25 +20,25 @@ ion-title {
 
 @keyframes titleAnimation {
   0% {
-    transform: translateX(0);
+    transform: translateY(0);
   }
   25% {
-    transform: translateX(25%);
+    transform: translateY(25%);
     opacity: 1;
   }
   50% {
     opacity: 0.2;
   }
   75% {
-    transform: translateX(-25%);
+    transform: translateY(-25%);
     opacity: 1;
   }
   100% {
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
 
-ion-input.anim {
+.anim {
   animation: inputAnimation 1s;
 }
 
