--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,18 +1,20 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title id="titulo">Appsita</ion-title>
+    <ion-title id="titulo">Skeleton App</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-button id="open-modal" expand="block" shape="round">Iniciar sesión</ion-button>
-  <ion-button id="open-modal" expand="block" (click)="registro()" shape="round">Registrarse</ion-button>
-  <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+  <ion-content class="ion-padding">
+    <ion-card class="boton-inicio-registro">
+      <ion-button id="open-modal" expand="block" shape="round" color="secondary">Iniciar sesión</ion-button>
+      <ion-button id="open-modal" expand="block" (click)="registro()" shape="round" color="secondary">Registrarse</ion-button>
+    </ion-card>
+    <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
     <ng-template>
       <ion-header>
         <ion-toolbar>
           <ion-buttons slot="start">
-            <ion-back-button defaultHref="/login" (click)="cancel()"></ion-back-button>
+            <ion-back-button defaultHref="/login" (click)="cancel()" color="secondary"></ion-back-button>
           </ion-buttons>
           <ion-title id="inicio-sesion">Inicio de sesión</ion-title>
         </ion-toolbar>
@@ -29,10 +31,10 @@
           <ion-input type="password" placeholder="0000000" [(ngModel)]="password"></ion-input>
         </ion-item>
 
-        <ion-button expand="full" (click)="login()" shape="round">Iniciar sesión</ion-button>
+        <ion-button expand="full" (click)="login()" shape="round" color="success">Iniciar sesión</ion-button>
       </ion-content>
     </ng-template>
   </ion-modal>
-</ion-content>
+  </ion-content>
 
 
