--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,3 @@
-
 <ion-header>
   <ion-toolbar>
     <ion-back-button defaultHref="/login" class="secondary"></ion-back-button>
@@ -13,11 +12,25 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-card>
+  <!-- Segmentos -->
+  <ion-segment [(ngModel)]="segmentValue">
+    <ion-segment-button value="default">
+      <ion-label>Default</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="segment1">
+      <ion-label>Segment 1</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="segment2">
+      <ion-label>Segment 2</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <!-- Contenido del primer segmento -->
+  <ion-card *ngIf="segmentValue === 'default'">
     <ion-card-header>
-      <ion-card-title>Bienvenido, {{loggedInUser}} </ion-card-title>
+      <ion-card-title>Bienvenido, {{ loggedInUser }}</ion-card-title>
     </ion-card-header>
-  
+
     <ion-card-content>
       <ion-item>
         <ion-label position="stacked">Nombre</ion-label>
@@ -44,12 +57,11 @@
       <p>Fecha de nacimiento</p>
       <br>
       <ion-datetime presentation="date" displayFormat="DD/MM/YYYY" [(ngModel)]="fecha"></ion-datetime>
-      
+
       <ion-button (click)="limpiarCampos()" expand="full" shape="round" color="success">Limpiar</ion-button>
       <ion-button (click)="mostrarDatos()" expand="full" shape="round" color="secondary">Mostrar datos</ion-button>
 
     </ion-card-content>
   </ion-card>
-
 
 </ion-content>
