--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -54,7 +54,7 @@
       <ion-datetime presentation="date" displayFormat="DD/MM/YYYY" [(ngModel)]="fecha"></ion-datetime>
 
       <ion-button (click)="limpiarCampos()" expand="full" shape="round" color="success">Limpiar</ion-button>
-      <ion-button (click)="mostrarDatos()" expand="full" shape="round" color="secondary">Mostrar datos</ion-button>
+      <ion-button (click)="mostrarDatos()" expand="full" shape="round" color="secondary">Mostrar y guardar datos</ion-button>
 
     </ion-card-content>
   </ion-card>
@@ -91,7 +91,7 @@
       </ion-item>
   
       <ion-button (click)="limpiarCampos()" expand="full" shape="round" color="success">Limpiar</ion-button>
-      <ion-button (click)="mostrarDatosLaborales()" expand="full" shape="round" color="secondary">Mostrar datos</ion-button>
+      <ion-button (click)="mostrarDatosLaborales()" expand="full" shape="round" color="secondary">Mostrar y guardar datos</ion-button>
     </ion-card-content>
   </ion-card>
 
@@ -122,7 +122,7 @@
       </ion-item>
   
       <ion-button (click)="limpiarCampos()" expand="full" shape="round" color="success">Limpiar</ion-button>
-      <ion-button (click)="mostrarDatosCertificados()" expand="full" shape="round" color="secondary">Mostrar datos</ion-button>
+      <ion-button (click)="mostrarDatosCertificados()" expand="full" shape="round" color="secondary">Mostrar y guardar datos</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
